build changes, /design prefix

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,5 @@
 applications:
-  - name: aidp-test-prod
+  - name: ai-design
     buildpack: https://github.com/cloudfoundry/staticfile-buildpack.git
     memory: 128M
     instances: 2
