--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "gatsby": "^2.3.5",
-    "gatsby-theme-carbon": "0.7.0",
+    "gatsby-theme-carbon": "^1.0.0-alpha.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
