--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "develop": "gatsby develop",
     "build": "rm -rf public && PATH_PREFIX='/design/ai' gatsby build --prefix-paths && mv public ai && mkdir design && mv ai design && mkdir public && mv design public && cp ./static/hero.png ./static/hero.mp4 public/design/ai",
     "develop:clean": "trash .cache && gatsby develop",
-    "prod": "trash .cache && gatsby serve"
+    "prod": "trash .cache && gatsby serve",
     "now-build": "npm run build"
   },
   "dependencies": {
     "gatsby": "^2.3.5",
-    "gatsby-theme-carbon": "^1.0.0-alpha.3",
+    "gatsby-theme-carbon": "^1.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
