--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -18,8 +18,8 @@
   pages:
     - title: Overview
       path: /ethics/
-    - title: Introduction
-      path: /ethics/introduction
+    - title: Everyday Ethics for AI
+      path: /ethics/everyday-ethics
     - title: Accountability
       path: /ethics/accountability
     - title: Value Alignment
