conversation design to conversation planning; fixed a typo on ai and ml

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -35,7 +35,7 @@
     - title: Overview
       path: /conversation
     - title: Planning
-      path: /conversation/design
+      path: /conversation/planning
 # - title: Resources
 #   pages:
 #     - path: /resources
