--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "scripts": {
     "develop": "gatsby develop",
-    "build": "rm -rf public && PATH_PREFIX='/design/ai' gatsby build --prefix-paths && mv public ai && mkdir design && mv ai design && mkdir public && mv design public && cp ./static/hero.png ./static/hero.mp4 public/design/ai",
+    "build": "trash .cache && rm -rf public && PATH_PREFIX='/design/ai' gatsby build --prefix-paths && mv public ai && mkdir design && mv ai design && mkdir public && mv design public && cp ./static/hero.png ./static/hero.mp4 public/design/ai",
     "develop:clean": "trash .cache && gatsby develop",
     "prod": "trash .cache && gatsby serve",
     "now-build": "npm run build"
