--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -18,7 +18,7 @@
   pages:
     - title: Overview
       path: /ethics/
-    - title: Everyday ethics for AI
+    - title: Everyday Ethics for AI
       path: /ethics/everyday-ethics
     - title: Accountability
       path: /ethics/accountability
