--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "dependencies": {
     "gatsby": "^2.15.14",
-    "gatsby-theme-carbon": "^1.11.6",
+    "gatsby-theme-carbon": "^1.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "gatsby-plugin-force-trailing-slashes": "^1.0.4"
+  }
 }
