--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "gatsby": "^2.15.14",
+    "gatsby-plugin-google-analytics": "^2.1.19",
     "gatsby-theme-carbon": "^1.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
