another build command and conversation copy

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "develop": "gatsby develop",
     "build": "trash .cache && rm -rf public && PATH_PREFIX='/design/ai' gatsby build --prefix-paths && mv public ai && mkdir design && mv ai design && mkdir public && mv design public && cp ./static/hero.png ./static/hero.mp4 public/design/ai",
     "develop:clean": "trash .cache && gatsby develop",
-    "prod": "trash .cache && gatsby serve",
+    "prod": "npm run build && gatsby serve",
     "now-build": "npm run build"
   },
   "dependencies": {
